Début mise en page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orinoco</title>
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <script scr="./js/index.js"></script>
+    <div class="container-fluid logoColor">
+      <div class="container">
+        <div class="row">
+          <img src="assets/15675819263013_image1.png" alt="Logo" />
+        </div>
+      </div>
+      <div class="container button">
+        <a href="produits.html">
+          <button class="btn btn-size">Produits</button>
+        </a>
+        <a href="panier.html">
+          <button class="btn btn-size">Panier</button>
+        </a>
+      </div>
+    </div>
+    <script src="index.js"></script>
   </body>
 </html>
