Début mise en page

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         </div>
       </div>
       <div class="container button">
-        <a href="produits.html">
+        <a href="assets/produits.html">
           <button class="btn btn-size">Produits</button>
         </a>
-        <a href="panier.html">
+        <a href="assets/panier.html">
           <button class="btn btn-size">Panier</button>
         </a>
       </div>
