Page d'acceuil (html JS) css incomplet

--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container-fluid logoColor">
-      <div class="container">
-        <div class="row">
+    <div class="container-fluid">
+      <div class="container logo">
+        <div class="row logo">
           <img src="assets/15675819263013_image1.png" alt="Logo" />
         </div>
       </div>
-      <div class="container button">
-        <a href="assets/produits.html">
-          <button class="btn btn-size">Produits</button>
-        </a>
-        <a href="assets/panier.html">
-          <button class="btn btn-size">Panier</button>
-        </a>
-      </div>
+    </div>
+    <div class="container card-container">
+      <div class="row row-card"></div>
+    </div>
+    <div class="container button">
+      <a href="assets/produits.html">
+        <button type="button" class="btn btn-style btn-lg btn-block">
+          Produits
+        </button>
+      </a>
+      <a href="assets/panier.html">
+        <button class="btn btn-style btn-lg">Panier</button>
+      </a>
     </div>
     <script src="index.js"></script>
   </body>
