--- a/assets/produits.html
+++ b/assets/produits.html
@@ -5,11 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orinoco</title>
+    <script src="https://kit.fontawesome.com/5c44671923.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="../css/bootstrap.min.css" />
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="container-fluid logoColor"></div>
+    <div class="container-fluid">
+      <div class="container logo">
+          <img class="img-fluid" src="../assets/15675819263013_image1.png" alt="Logo" />
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="../index.html">Menu</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="./produits.html"><i class="fab fa-product-hunt"></i>Produits</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./panier.html"><i class="fas fa-cart-arrow-down"></i>Panier</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
     <script src="index.js"></script>
   </body>
 </html>
