Contenu produitsPage (manque btn et personnalisation)

--- a/assets/produits.html
+++ b/assets/produits.html
@@ -30,6 +30,7 @@
           </ul>
         </div>
       </nav>
-    <script src="index.js"></script>
+      <div class="container product-cards"></div>
+    <script src="../index.js"></script>
   </body>
 </html>
