Page produit (produit unique)

--- a/assets/produits.html
+++ b/assets/produits.html
@@ -31,6 +31,7 @@
         </div>
       </nav>
       <div class="container product-cards"></div>
-    <script src="../index.js"></script>
+    <script src="../js/pageProduits.js"></script>
+
   </body>
 </html>
