Finition pageProduits et formulaire

--- a/assets/panier.html
+++ b/assets/panier.html
@@ -30,6 +30,7 @@
       <div class="panier"></div>
 
       <form action="">
+        <p> Tout les champs sont obligatoires.</p>
         <div class="firstname-container">
           <label for="first-name">Prénom</label>
           <input type="text" autocomplete="off" id="first-name">
@@ -55,14 +56,15 @@
         </div>
 
         <div class="email-container">
-          <label for="email">E-mail</label>
+          <label for="email">Email</label>
           <input type="text" autocomplete="off" id="email">
           <span></span>
         </div>
     
     
-        <input type="submit" value="Valider">
+        <input class="valide" type="submit" value="Valider">
       </form>
-    <script src="index.js"></script>
+    <script src="../js/form.js"></script>
+    <script src="../js/pagePanier.js"></script>
   </body>
 </html>
