Panier -> product & user

--- a/assets/panier.html
+++ b/assets/panier.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid panier-container">
       <div class="container logo">
           <img class="img-fluid" src="../assets/15675819263013_image1.png" alt="Logo" />
       </div>
@@ -27,7 +27,7 @@
           </ul>
         </div>
       </nav>
-      <div class="panier"></div>
+      <div class="container panier"></div>
 
       <form action="">
         <p> Tout les champs sont obligatoires.</p>
