--- a/assets/confirmationPage.html
+++ b/assets/confirmationPage.html
@@ -9,36 +9,42 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <div class="container-fluid">
-      <div class="container logo">
-        <img class="img-fluid" src="./15675819263013_image1.png" alt="Logo" />
-      </div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="../index.html">Menu</a>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img class="img-fluid" src="./15675819263013_image1.png" alt="Logo"
+        /></a>
         <button
           class="navbar-toggler"
           type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="./panier.html"
-                ><i class="fas fa-cart-arrow-down"></i>Panier</a
+              <a class="nav-link active" aria-current="page" href="/"
+                >Acceuil</a
               >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./panier.html">Panier</a>
             </li>
           </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
+
+    <div class="container-fluid">
       <div class="container message"></div>
     </div>
 
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="../js/confirmation.js"></script>
   </body>
 </html>
