--- a/index.html
+++ b/index.html
@@ -5,31 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orinoco</title>
-    <script src="https://kit.fontawesome.com/5c44671923.js" crossorigin="anonymous"></script>  
+    <script
+      src="https://kit.fontawesome.com/5c44671923.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/style.css" />
-
- 
   </head>
   <body>
-    <div class="container-fluid">
-    <div class="container logo">
-        <img class="img-fluid" src="assets/15675819263013_image1.png" alt="Logo" />
-    </div>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">Menu</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="./assets/panier.html"><i class="fas fa-cart-arrow-down"></i>Panier</a>
-          </li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img
+            class="img-fluid"
+            src="assets/15675819263013_image1.png"
+            alt="Logo"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/"
+                >Acceuil</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./assets/panier.html">Panier</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
-    <div class="container card-container"></div>
+
+    <div class="container-fluid">
+      <div class="container card-container"></div>
+    </div>
+
     <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="index.js"></script>
   </body>
