--- a/assets/panier.html
+++ b/assets/panier.html
@@ -53,36 +53,65 @@
       <form action="">
         <p>Tout les champs sont obligatoires.</p>
         <div class="firstname-container">
-          <label for="first-name">Prénom</label>
-          <input type="text" autocomplete="off" id="first-name" />
+          <label class="form-label" for="first-name">Prénom</label>
+          <input
+            class="form-control"
+            type="text"
+            autocomplete="off"
+            id="first-name"
+          />
           <span></span>
         </div>
 
         <div class="lastname-container">
-          <label for="last-name">Nom</label>
-          <input type="text" autocomplete="off" id="last-name" />
+          <label class="form-label" for="last-name">Nom</label>
+          <input
+            class="form-control"
+            type="text"
+            autocomplete="off"
+            id="last-name"
+          />
           <span></span>
         </div>
 
         <div class="adress-container">
-          <label for="adress">Adresse</label>
-          <input type="text" autocomplete="off" id="adress" />
+          <label class="form-label" for="adress">Adresse</label>
+          <input
+            class="form-control"
+            type="text"
+            autocomplete="off"
+            id="adress"
+          />
           <span></span>
         </div>
 
         <div class="city-container">
-          <label for="city">Ville</label>
-          <input type="text" autocomplete="off" id="city" />
+          <label class="form-label" for="city">Ville</label>
+          <input
+            class="form-control"
+            type="text"
+            autocomplete="off"
+            id="city"
+          />
           <span></span>
         </div>
 
         <div class="email-container">
-          <label for="email">Email</label>
-          <input type="text" autocomplete="off" id="email" />
+          <label class="form-label" for="email">Email</label>
+          <input
+            class="form-control"
+            type="text"
+            autocomplete="off"
+            id="email"
+          />
           <span></span>
         </div>
 
-        <input class="valide" type="submit" value="Valider" />
+        <input
+          class="valide btn-outline-primary"
+          type="submit"
+          value="Valider"
+        />
       </form>
     </div>
 
