--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
     </nav>
 
     <div class="container-fluid">
-      <div class="container card-container"></div>
+      <div class="container">
+        <div
+          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 card-container"
+        ></div>
+      </div>
     </div>
 
     <script src="/js/bootstrap.bundle.min.js"></script>
