Bootstrap + CSS site entier

--- a/assets/panier.html
+++ b/assets/panier.html
@@ -50,7 +50,7 @@
     <div class="container-fluid panier-container">
       <div class="container panier"></div>
 
-      <form action="">
+      <form class="border rounded" action="">
         <p>Tout les champs sont obligatoires.</p>
         <div class="firstname-container">
           <label class="form-label" for="first-name">Prénom</label>
