--- a/assets/produits.html
+++ b/assets/produits.html
@@ -46,6 +46,8 @@
     <div class="container-fluid">
       <div class="container product-cards card shadow"></div>
     </div>
+
+    <script src="/js/bootstrap.bundle.min.js"></script>
     <script src="../js/pageProduits.js"></script>
   </body>
 </html>
