Changement href sur logo pour page d'acceuil (il y avait error 404)

--- a/assets/produits.html
+++ b/assets/produits.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="/"
           ><img class="img-fluid" src="./15675819263013_image1.png" alt="Logo"
         /></a>
         <button
