--- a/assets/confirmationPage.html
+++ b/assets/confirmationPage.html
@@ -11,7 +11,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/"
+        <a class="navbar-brand" href="/index.html"
           ><img class="img-fluid" src="./15675819263013_image1.png" alt="Logo"
         /></a>
         <button
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/"
+              <a class="nav-link active" aria-current="page" href="/index.html"
                 >Acceuil</a
               >
             </li>
