--- a/assets/panier.html
+++ b/assets/panier.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html"
+        <a class="navbar-brand" href="../index.html"
           ><img
             class="img-fluid"
             src="../assets/15675819263013_image1.png"
@@ -35,7 +35,10 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="../index.html"
                 >Acceuil</a
               >
             </li>
