--- a/assets/panier.html
+++ b/assets/panier.html
@@ -35,15 +35,12 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="../index.html"
+              <a class="nav-link" aria-current="page" href="../index.html"
                 >Acceuil</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./panier.html">Panier</a>
+              <a class="nav-link active" href="./panier.html">Panier</a>
             </li>
           </ul>
         </div>
