Ajout "panier vide" pagePanier => site fini

--- a/assets/panier.html
+++ b/assets/panier.html
@@ -48,7 +48,9 @@
     </nav>
 
     <div class="container-fluid panier-container">
-      <div class="container panier"></div>
+      <div class="container panier">
+        <h3>Votre panier est vide</h3>
+      </div>
 
       <form class="border rounded" action="">
         <p>Tout les champs sont obligatoires.</p>
