--- a/assets/panier.html
+++ b/assets/panier.html
@@ -52,7 +52,7 @@
         <h3>Votre panier est vide</h3>
       </div>
 
-      <form class="border rounded" action="">
+      <form class="border rounded form-empty" action="">
         <p>Tout les champs sont obligatoires.</p>
         <div class="firstname-container">
           <label class="form-label" for="first-name">Prénom</label>
